--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,80 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+.top-nav {
+	display: flex;
+	justify-content: space-evenly;
+	flex-direction: row;
+	justify-content: center;
+}
+.top-nav a{
+	width: 130px;
+	text-decoration: none;
+	color: grey;
+}
+
+/*second section */
+
+.top-media {
+	display: flex;
+	justify-content: space-evenly;
+	margin-top: 50px;
+}
+.top-media h1{
+	display: flex;
+	font-size: 70px;
+}
+
+/*third section */
+
+.third {
+ display: flex;
+ flex-wrap: wrap;
+ justify-content: center;
+ justify-content: space-evenly;
+
+}
+.third div{
+	width: 30%;
+}
+.third img {
+	width: 80%;
+	margin: 3% 0;
+}
+
+button{
+	display: flex;
+	margin-left: 250px;
+	background-color: grey; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-decoration: none;
+	font-size: 16px;
+	margin-bottom: 20px;
+}
+.services{
+	display: flex;
+	flex-direction: column;
+	margin: 5% 10%;
+}
+.services h2{
+	margin-top: 20px;
+}
+.services-second{
+	display: flex;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+}
+.services-second div{
+	width: 350px;
+	border-style: solid;
+	border-width: 2px;
+	margin: 20px;
+	background-color: lightgray;
+	padding: 10px;
+	
+
+	
+}
